--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink: pretty
 
 favicon: "/assets/img/temp_chem.jpg"
 
-port: 4000
-url: http://localhost:4000
+# port: 4000
+url: https://duonggiaoky.github.io
 
 sass:
   sass_dir: assets/css
