--- a/_config.yml
+++ b/_config.yml
@@ -15,33 +15,33 @@ sass:
   style: :nested
 
 # Add bibliography
-gems: ['jekyll/scholar']
+# gems: ['jekyll/scholar']
 
-scholar:
-  style: assets/bib/_ieee-with-url.csl
-  locale: en
+# scholar:
+#   style: assets/bib/_ieee-with-url.csl
+#   locale: en
 
-  sort_by: none
-  order: ascending
+#   sort_by: none
+#   order: ascending
 
-  group_by: none
-  group_order: ascending
+#   group_by: none
+#   group_order: ascending
 
-  source: assets/bib
-  bibliography: _mybib.bib
-  bibliography_template: "{{reference}}"
+#   source: assets/bib
+#   bibliography: _mybib.bib
+#   bibliography_template: "{{reference}}"
 
-  replace_strings: true
-  join_strings:    true
+#   replace_strings: true
+#   join_strings:    true
 
-  use_raw_bibtex_entry: false
-  bibtex_filters:
-  - superscript
-  - latex
-  - HTML
+#   use_raw_bibtex_entry: false
+#   bibtex_filters:
+#   - superscript
+#   - latex
+#   - HTML
 
-  details_dir:    bibliography
-  details_layout: bibtex.html
-  details_link:   Details
+#   details_dir:    bibliography
+#   details_layout: bibtex.html
+#   details_link:   Details
 
-  query: "@*"
+#   query: "@*"
