--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,6 +1,7 @@
 - author: "Duong Giao Ky, Van Tien Nguyen, and Hatem Zaag"
   article: "Construction of a stable blowup solution with a prescribed behavior for a non-scaling-invariant semilinear heat equation"
   editor: "Tunisian Journal of Mathematics"
+  pdf: "ex.pdf"
   more: "1.1 (2018): 13-45"
 - author: "Duong Giao Ky"
   article: "Profile for the imaginary part of a blowup solution for a complex-valued seminar heat equation"
@@ -9,8 +10,10 @@
 - author: "Duong Giao Ky"
   article: "A blowup solution of a complex semi-linear heat equation with an irrational power"
   editor: "arXiv preprint arXiv:1804.00560"
+  pdf: "ex.pdf"
   more: "(2018)"
 - author: "Duong Giao Ky, and Hatem Zaag"
   article: "Profile of touch-down solution to a nonlocal MEMS model"
   editor: "arXiv preprint arXiv:1811.11483"
+  pdf: "ex.pdf"
   more: "(2018)"
