--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,19 +1,17 @@
 - author: "Duong Giao Ky, Van Tien Nguyen, and Hatem Zaag"
   article: "Construction of a stable blowup solution with a prescribed behavior for a non-scaling-invariant semilinear heat equation"
-  editor: "Tunisian Journal of Mathematics"
-  pdf: "ex.pdf"
-  more: "1.1 (2018): 13-45"
+  editor: "Tunisian Journal of Mathematics, Vol. 1,  No. 1, pp. 13-45 (2019)"
+  more: "Doi:https://doi.org/10.2140/tunis.2019.1.13"
 - author: "Duong Giao Ky"
   article: "Profile for the imaginary part of a blowup solution for a complex-valued seminar heat equation"
-  editor: "arXiv preprint arXiv:1712.07183"
-  more: "(2017)"
+  editor: "J. Funct. Anal, Vol. 277, No. 5,  pp. 1531-1579 (2019)
+"
+  more: "Doi:https://doi.org/10.1016/j.jfa.2019.05.009"
 - author: "Duong Giao Ky"
   article: "A blowup solution of a complex semi-linear heat equation with an irrational power"
-  editor: "arXiv preprint arXiv:1804.00560"
-  pdf: "ex.pdf"
-  more: "(2018)"
+  editor: "J. Diff. Eqs (2019)"
+  more: "Doi:https://doi.org/10.1016/j.jde.2019.05.024"
 - author: "Duong Giao Ky, and Hatem Zaag"
   article: "Profile of touch-down solution to a nonlocal MEMS model"
-  editor: "arXiv preprint arXiv:1811.11483"
-  pdf: "ex.pdf"
-  more: "(2018)"
+  editor: "Mathematical Models and Methods in Applied Sciences, Vol. 29, No. 07, pp. 1279-1348 (2019)"
+  more: "Doi:http://dx.doi.org/10.1142/S0218202519500222"
