--- a/_data/research.yml
+++ b/_data/research.yml
@@ -4,8 +4,7 @@
   more: "Doi:https://doi.org/10.2140/tunis.2019.1.13"
 - author: "Duong Giao Ky"
   article: "Profile for the imaginary part of a blowup solution for a complex-valued seminar heat equation"
-  editor: "J. Funct. Anal, Vol. 277, No. 5,  pp. 1531-1579 (2019)
-"
+  editor: "J. Funct. Anal, Vol. 277, No. 5,  pp. 1531-1579 (2019)"
   more: "Doi:https://doi.org/10.1016/j.jfa.2019.05.009"
 - author: "Duong Giao Ky"
   article: "A blowup solution of a complex semi-linear heat equation with an irrational power"
