--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,14 +1,16 @@
-- course: "Linear Algebra"
+- course:  Math tools
   place: "University Paris 13"
-  time: "Sprint 2018"
-  pdf: "ex.pdf"
-  more: "Some additional information"
+  time: " 2nd semester  (2018-2019)"
+  more: Monitoring
+- course: "Mathematics for the engineers"
+  place: "University Paris 13"
+  time: "1st semester (2018-2019)"
+  more: "Monitoring"
 - course: "Propability and Statistics"
   place: "University Paris 13"
-  time: "13/3/2017 - 20/7/2017"
-  more: "Some additional information"
-- course: "Analysis"
+  time: "2nd semester (2017-2018)"
+  more: "Monitoring"
+- course: "Analyse 3"
   place: "University Paris 13"
-  time: "Sprint 2016"
-  pdf: "ex.pdf"
-  more: "Some additional information"
+  time: " 1st semester (2017-2018)"
+  more: "Monitoring"
