--- a/_data/research.yml
+++ b/_data/research.yml
@@ -13,4 +13,14 @@
 - author: "Duong Giao Ky, and Hatem Zaag"
   article: "Profile of touch-down solution to a nonlocal MEMS model"
   editor: "Mathematical Models and Methods in Applied Sciences, Vol. 29, No. 07, pp. 1279-1348 (2019)"
-  more: "Doi:http://dx.doi.org/10.1142/S0218202519500222"
+  more: "Doi:http://dx.doi.org/10.1142/S0218202519500222" 
+- author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
+  article: " Construction of blow-up solutions for the Complex Ginzburg-Landau equation with critical parameters"
+  editor: "Mem. Amer. Math. Soc., to appear, (2020). arXiv:1912.05922"
+- author: "Duong Giao Ky, and  Nikos Kavallaris, and Hatem Zaag"
+  article: "Diffusion-induced blowup solutions for the shadow limit model of a singular Gierer-Meinhardt system"
+  editor: "submitted, (2020), arXiv:2010.09867"
+- author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
+  article: "Refined asymptotic for the blow-upsolution of the Complex Ginzburg-Landauequation in the subcritical case"
+  editor: "Preprint, 2020"
+  
