--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,7 +3,7 @@
   icon: "fas fa-university"
 
 - title: "CV"
-  href: "/files/ky_duong_cv.pdf"
+  href: "/files/CV-Giao-Ky-Duong.pdf"
   icon: "far fa-file-pdf"
 
 - title: "Teaching"
