--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,6 +17,15 @@
 #     - subtitle: "Item 2"
 #       subhref: "/misc/item-2/"
 
+
+
+- title: "Blog"
+  href: "/blog"
+  icon: "far fa-clone"
+  
+  
+  
+  
 - title: "Blog"
   href: "/blog"
   icon: "far fa-newspaper"
