--- a/_data/research.yml
+++ b/_data/research.yml
@@ -22,5 +22,5 @@
   editor: "submitted, (2020), arXiv:2010.09867"
 - author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
   article: "Refined asymptotic for the blow-upsolution of the Complex Ginzburg-Landauequation in the subcritical case"
-  editor: "Preprint, 2020"
+  editor: " Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire Articles to appear 2021"
   
