--- a/_data/research.yml
+++ b/_data/research.yml
@@ -21,6 +21,6 @@
   article: "Diffusion-induced blowup solutions for the shadow limit model of a singular Gierer-Meinhardt system"
   editor: "submitted, (2020), arXiv:2010.09867"
 - author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
-  article: "Refined asymptotic for the blow-upsolution of the Complex Ginzburg-Landauequation in the subcritical case"
-  editor: " Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire Articles to appear 2021"
+  article: "Refined asymptotic for the blow-up solution of the Complex Ginzburg-Landau equation in the subcritical case"
+  editor: " Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire, to appear 2021"
   
