--- a/_data/research.yml
+++ b/_data/research.yml
@@ -19,8 +19,8 @@
   editor: "Mem. Amer. Math. Soc., to appear, (2020). arXiv:1912.05922"
 - author: "Duong Giao Ky, and  Nikos Kavallaris, and Hatem Zaag"
   article: "Diffusion-induced blowup solutions for the shadow limit model of a singular Gierer-Meinhardt system"
-  editor: "submitted, (2020), arXiv:2010.09867"
+  editor: "Mathematical Models and Methods in Applied Sciences, to appear 2021"
 - author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
   article: "Refined asymptotic for the blow-up solution of the Complex Ginzburg-Landau equation in the subcritical case"
-  editor: " Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire, to appear 2021"
+  editor: "Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire, to appear 2021"
   
