--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,26 +1,37 @@
-- author: "Duong Giao Ky, Van Tien Nguyen, and Hatem Zaag"
+- author: "Duong Giao Ky, Van Tien Nguyen and Hatem Zaag"
   article: "Construction of a stable blowup solution with a prescribed behavior for a non-scaling-invariant semilinear heat equation"
   editor: "Tunisian Journal of Mathematics, Vol. 1,  No. 1, pp. 13-45 (2019)"
   more: "Doi:https://doi.org/10.2140/tunis.2019.1.13"
 - author: "Duong Giao Ky"
   article: "Profile for the imaginary part of a blowup solution for a complex-valued seminar heat equation"
-  editor: "J. Funct. Anal, Vol. 277, No. 5,  pp. 1531-1579 (2019)"
+  editor: "Journal of Functional Analysis, Vol. 277, No. 5,  pp. 1531-1579 (2019)"
   more: "Doi:https://doi.org/10.1016/j.jfa.2019.05.009"
 - author: "Duong Giao Ky"
   article: "A blowup solution of a complex semi-linear heat equation with an irrational power"
-  editor: "J. Diff. Eqs (2019)"
+  editor: "Journal of Differential Equations, Vol. 267, No. 9, pp. 4975-5048 (2019)"
   more: "Doi:https://doi.org/10.1016/j.jde.2019.05.024"
-- author: "Duong Giao Ky, and Hatem Zaag"
+- author: "Duong Giao Ky and Hatem Zaag"
   article: "Profile of touch-down solution to a nonlocal MEMS model"
   editor: "Mathematical Models and Methods in Applied Sciences, Vol. 29, No. 07, pp. 1279-1348 (2019)"
   more: "Doi:http://dx.doi.org/10.1142/S0218202519500222" 
-- author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
+- author: "Duong Giao Ky, Nejla Nouaili and Hatem Zaag"
   article: " Construction of blow-up solutions for the Complex Ginzburg-Landau equation with critical parameters"
-  editor: "Mem. Amer. Math. Soc., to appear, (2020). arXiv:1912.05922"
-- author: "Duong Giao Ky, and  Nikos Kavallaris, and Hatem Zaag"
+  editor: "Memoirs of the American Mathematical Society, accepted in  2020, to appear,  arXiv:1912.05922"
+- author: "Duong Giao Ky,   Nikos Kavallaris and Hatem Zaag"
   article: "Diffusion-induced blowup solutions for the shadow limit model of a singular Gierer-Meinhardt system"
-  editor: "Mathematical Models and Methods in Applied Sciences, to appear 2021"
-- author: "Duong Giao Ky, and  Nejla Nouaili, and Hatem Zaag"
+  editor: "Mathematical Models and Methods in Applied Sciences, Vol. 31, No. 7, pp.  1469-1503 (2021)"
+  more: "  https://doi.org/10.1142/S0218202521500305 "
+- author: "Duong Giao Ky,   Nejla Nouaili and Hatem Zaag"
   article: "Refined asymptotic for the blow-up solution of the Complex Ginzburg-Landau equation in the subcritical case"
-  editor: "Annales de l'Institut Henri Poincaré C, Analyse Non Linéaire, to appear 2021"
+  more: "Annales de l'Institut Henri Poincaré C - Analyse Non Linéaire, Vol. 39, No. 1 (2021)"
+- author: "Giao Ky Duong, Tej Eddine Ghoul and  Hatem Zaag "
+  article:  "Sharp equivalent for the blowup profile to the gradient of a solution to the semilinear heat equation "
+  more: "Submitted (2022), arXiv:2109.03497 "
+- author: "Giao Ky Duong, Tej-Eddine Ghoul, Nikos Kavallaris and  Hatem Zaag "
+  article:  " Blowup solutions for the shadow limit model of singular Gierer-Meinhardt system with critical parameters "
+  more: "Submitted (2022), arXiv:2106.07481  "
+- author: "Abdelwahab Bensouilah, Giao Ky Duong and  Tej-Eddine Ghoul "
+  article:  " Non-self similar blowup solutions to the higher dimensional Yang-Mills heat flows  "
+  more: "Submitted (2022), arXiv:2106.07481  "
+
   
