--- a/_data/research.yml
+++ b/_data/research.yml
@@ -23,15 +23,18 @@
   more: "  https://doi.org/10.1142/S0218202521500305 "
 - author: "Duong Giao Ky,   Nejla Nouaili and Hatem Zaag"
   article: "Refined asymptotic for the blow-up solution of the Complex Ginzburg-Landau equation in the subcritical case"
-  more: "Annales de l'Institut Henri Poincaré C - Analyse Non Linéaire, Vol. 39, No. 1 (2021)"
+  editor: "Annales de l'Institut Henri Poincaré C - Analyse Non Linéaire, Vol. 39, No. 1 (2021)"
 - author: "Giao Ky Duong, Tej Eddine Ghoul and  Hatem Zaag "
   article:  "Sharp equivalent for the blowup profile to the gradient of a solution to the semilinear heat equation "
-  more: "Submitted (2022), arXiv:2109.03497 "
+  editor: " Submitted (2022)"
+  more: "ArXiv:2109.03497 "
 - author: "Giao Ky Duong, Tej-Eddine Ghoul, Nikos Kavallaris and  Hatem Zaag "
   article:  " Blowup solutions for the shadow limit model of singular Gierer-Meinhardt system with critical parameters "
-  more: "Submitted (2022), arXiv:2106.07481  "
+  editor: "Submitted (2022),  "
+  more: "ArXiv:2106.07481  "
 - author: "Abdelwahab Bensouilah, Giao Ky Duong and  Tej-Eddine Ghoul "
-  article:  " Non-self similar blowup solutions to the higher dimensional Yang-Mills heat flows  "
-  more: "Submitted (2022), arXiv:2106.07481  "
+  article:  "Non-self similar blowup solutions to the higher dimensional Yang-Mills heat flows"
+  editor: "Submitted (2022)"
+  more: "ArXiv:2106.07481  "
 
   
