--- a/_data/research.yml
+++ b/_data/research.yml
@@ -16,7 +16,8 @@
   more: "Doi:http://dx.doi.org/10.1142/S0218202519500222" 
 - author: "Duong Giao Ky, Nejla Nouaili and Hatem Zaag"
   article: " Construction of blow-up solutions for the Complex Ginzburg-Landau equation with critical parameters"
-  editor: "Memoirs of the American Mathematical Society, accepted in  2020, to appear,  arXiv:1912.05922"
+  editor: "Memoirs of the American Mathematical Society,  Vol 285, No 1411,pp v+91, 2023"
+  more: "https://www.ams.org/books/memo/1411/"
 - author: "Duong Giao Ky,   Nikos Kavallaris and Hatem Zaag"
   article: "Diffusion-induced blowup solutions for the shadow limit model of a singular Gierer-Meinhardt system"
   editor: "Mathematical Models and Methods in Applied Sciences, Vol. 31, No. 7, pp.  1469-1503 (2021)"
@@ -24,17 +25,22 @@
 - author: "Duong Giao Ky,   Nejla Nouaili and Hatem Zaag"
   article: "Refined asymptotic for the blow-up solution of the Complex Ginzburg-Landau equation in the subcritical case"
   editor: "Annales de l'Institut Henri Poincaré C - Analyse Non Linéaire, Vol. 39, No. 1 (2021)"
-- author: "Giao Ky Duong, Tej Eddine Ghoul and  Hatem Zaag "
+- author: "Giao Ky Duong, Nejla Nouaili and  Hatem Zaag"
+  article:  "Modulation theory for the flat blowup solutions of nonlinear heat equation"
+  editor: "Communications on Pure and Applied Analysis, accepted, to appear 2023"
+  more: "ArXiv:2109.03497"
+- author: "Giao Ky Duong, Tej Eddine Ghoul and  Hatem Zaag"
   article:  "Sharp equivalent for the blowup profile to the gradient of a solution to the semilinear heat equation"
   editor: "Submitted (2022)"
   more: "ArXiv:2109.03497"
-- author: "Giao Ky Duong, Tej-Eddine Ghoul, Nikos Kavallaris and  Hatem Zaag "
+- author: "Giao Ky Duong, Tej-Eddine Ghoul, Nikos Kavallaris and  Hatem Zaag"
   article:  "Blowup solutions for the shadow limit model of singular Gierer-Meinhardt system with critical parameters"
-  editor: "Submitted (2022)"
-  more: "ArXiv:2106.07481"
+  editor: "Journal of Differential Equations, Vol. 336, pp. 73-125 (2019)"
+  more: "https://doi.org/10.1016/j.jde.2022.07.010"
 - author: "Abdelwahab Bensouilah, Giao Ky Duong and  Tej-Eddine Ghoul"
   article:  "Non-self similar blowup solutions to the higher dimensional Yang-Mills heat flows"
   editor: "Submitted (2022)"
   more: "ArXiv:2106.07481"
+
 
   
