--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,7 +3,7 @@
   icon: "fas fa-university"
 
 - title: "CV"
-  href: "https://www.dropbox.com/scl/fi/p91zkuadqgdoprleg6d3i/CV-Giao-Ky-Duong.pdf?rlkey=zkbj2smnbsj8nhg91yrc4te9a&dl=0"
+  href: "files/pdf/CV-Giao-Ky-Duong.pdf"
   icon: "far fa-file-pdf"
 
 - title: "Teaching"
